# chatGPT_streamlit

./: pyproject.toml
chatgpt_streamlit/: streamlit_run.py  streamlit_run_chat.py  test.ipynb
